# embeddings-viz

./: .gitignore  README.md  config.yaml  pyproject.toml
embeddings_viz/: __init__.py  __main__.py  app.py  config.py  embeddings.py  models.py  scene.py
embeddings_viz/templates/: index.html
